# 21f-pa03-kynerd-hulcy

./: .gitignore  CMakeLists.txt  README.md  girvan_newman.h  graphs.py  input.grapml  main.cpp  package.json  printGraph.py
input/: football.graphml  random_graph.graphml
output/: output.graphml
src/: convert_graphml.py  girvan_newman.h  graphs.py  json_parsing.py  main.cpp  printGraph.py  recommendation.py  spotify_api.js
